syntax = "proto3";

option java_package = "com.mastercard.protobuf";
option java_outer_classname = "PersonProto";

message Person {
  string name = 1; // full
  int32 age = 2;
  string email = 3;
  repeated PhoneNumber phones = 4;
  bool registered = 5;

  enum PhoneType {
    HOME = 0;
    MOBILE = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
}
